Changelog for Products.PloneSurvey
==================================

1.4.5 - Unreleased
------------------
  * Include Products.CMFCore permissions.zcml for Plone 4.1 compatibility
    [gaudenzius]

  * Fixed italian translation
    [keul]

1.4.4 - 2011-05-09
------------------

  * Add a MANIFEST.in file to fix the 1.4.3 release bug
    [encolpe]

1.4.3 - 2011-05-05
------------------

  * Fix z3c.rml dependency
    [encolpe]

  * Fix permission typo
    [jriboux]

  * Very basic survey printing using z3c.rml
    [Michael Davis]

  * Add browser layers, add an add survey permission, fix the results permission
    [Michael Davis]

1.4.2 - 2011-02-23
-------------------

  * Patch from Gaudenz Steinlin for Sendmail issue in Plone4
    [Michael Davis]
  * Is now possible to translate also default values for some questions content type
    [keul]
  * The use of i18dude now translate a lot of new entries, not translable before
    [keul]
  * Many "plone" msgid moved to a more correct "plonesurvey" domain
    [keul]
  * Added internal "*folder_factories*" view to see Plone Survey subtypes translated
    (see also `#11520`__) [keul]

__ http://dev.plone.org/plone/ticket/11520

1.4.1 - 2010-10-11
----------------------

  * New version as messed up the distribution
    [Michael Davis]

1.4.0 - 2010-10-10
----------------------

  * Polish translation and i18n improvements
    [Maciej Zieba]

  * Eggification and upgrade to Plone 4 compatibility
    [Ross Patterson]

  * Improve the respondents functionality and various other improvements
    [Michael Davis]

  * Captcha integration (with quintagroup.plonecaptchas)
    [sureshvv]

  * Bugfix on SurveyDateQuestion, in barchart view
    [tiazma]

  * French translation update
    [tiazma]

1.3.0 - 2009-02-10
------------------

  * Fork for plone 3 compatibility

1.2.2 - alpha1 - 2009-02-09
---------------------------

  * French translation update
    [sneridagh]

  * Catalan translation
    [Pilar Marinas]
